@@ -5,6 +5,7 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.Test;
@@ -12,9 +13,9 @@ import org.junit.Test;
 import no.nav.foreldrepenger.behandlingslager.uttak.PeriodeResultatType;
 import no.nav.foreldrepenger.behandlingslager.uttak.Trekkdager;
 import no.nav.foreldrepenger.behandlingslager.uttak.UttakArbeidType;
-import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakAktivitet;
-import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakPeriode;
-import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakPeriodeAktivitet;
+import no.nav.foreldrepenger.domene.uttak.fastsetteperioder.UttakResultatPeriode;
+import no.nav.foreldrepenger.domene.uttak.fastsetteperioder.UttakResultatPeriodeAktivitet;
+import no.nav.foreldrepenger.domene.uttak.fastsetteperioder.UttakResultatPerioder;
 import no.nav.fpsak.tidsserie.LocalDateInterval;
 import no.nav.vedtak.exception.TekniskException;
 
@@ -22,64 +23,74 @@ public class EndringerHarBegrunnelseValideringTest {
 
     @Test
     public void okAlleHarBegrunnelse() {
-        var opprinnelig = List.of(periode(null, PeriodeResultatType.IKKE_FASTSATT));
-        var nyePerioder = List.of(periode("Ny begrunnelse", PeriodeResultatType.INNVILGET));
-        var validering = new EndringerHarBegrunnelseValidering(opprinnelig);
-        assertThatCode(() -> validering.utfør(nyePerioder)).doesNotThrowAnyException();
+        List<UttakResultatPeriode> opprinneligeGrupper = Collections.singletonList(periodeGruppe(null, PeriodeResultatType.IKKE_FASTSATT));
+        UttakResultatPerioder opprinnelig = new UttakResultatPerioder(opprinneligeGrupper);
+        List<UttakResultatPeriode> grupper = Collections.singletonList(periodeGruppe("Ny begrunnelse", PeriodeResultatType.INNVILGET));
+        UttakResultatPerioder perioder = new UttakResultatPerioder(grupper);
+        EndringerHarBegrunnelseValidering validering = new EndringerHarBegrunnelseValidering(opprinnelig);
+        assertThatCode(() -> validering.utfør(perioder)).doesNotThrowAnyException();
     }
 
     @Test
     public void feilVedTomBegrunnelse() {
-        var opprinnelig = List.of(periode(null, PeriodeResultatType.IKKE_FASTSATT));
-        var nyePerioder = List.of(periode("", PeriodeResultatType.INNVILGET));
-        var validering = new EndringerHarBegrunnelseValidering(opprinnelig);
-        assertThatThrownBy(() -> validering.utfør(nyePerioder)).isInstanceOf(TekniskException.class);
+        List<UttakResultatPeriode> opprinneligeGrupper = Collections.singletonList(periodeGruppe(null, PeriodeResultatType.IKKE_FASTSATT));
+        UttakResultatPerioder opprinnelig = new UttakResultatPerioder(opprinneligeGrupper);
+        List<UttakResultatPeriode> grupper = Collections.singletonList(periodeGruppe("", PeriodeResultatType.INNVILGET));
+        UttakResultatPerioder perioder = new UttakResultatPerioder(grupper);
+        EndringerHarBegrunnelseValidering validering = new EndringerHarBegrunnelseValidering(opprinnelig);
+        assertThatThrownBy(() -> validering.utfør(perioder)).isInstanceOf(TekniskException.class);
     }
 
     @Test
     public void feilVedNullBegrunnelse() {
-        var opprinnelig = List.of(periode(null, PeriodeResultatType.IKKE_FASTSATT));
-        var nyePerioder = List.of(periode(null, PeriodeResultatType.INNVILGET));
-        var validering = new EndringerHarBegrunnelseValidering(opprinnelig);
-        assertThatThrownBy(() -> validering.utfør(nyePerioder)).isInstanceOf(TekniskException.class);
+        List<UttakResultatPeriode> opprinneligeGrupper = Collections.singletonList(periodeGruppe(null, PeriodeResultatType.IKKE_FASTSATT));
+        UttakResultatPerioder opprinnelig = new UttakResultatPerioder(opprinneligeGrupper);
+        List<UttakResultatPeriode> grupper = Collections.singletonList(periodeGruppe(null, PeriodeResultatType.INNVILGET));
+        UttakResultatPerioder perioder = new UttakResultatPerioder(grupper);
+        EndringerHarBegrunnelseValidering validering = new EndringerHarBegrunnelseValidering(opprinnelig);
+        assertThatThrownBy(() -> validering.utfør(perioder)).isInstanceOf(TekniskException.class);
     }
 
     @Test
     public void okÅMangleBegrunnelseHvisIngenEndring() {
-        var opprinnelig = List.of(periode(null, PeriodeResultatType.INNVILGET));
-        var nyePerioder = List.of(periode(null, PeriodeResultatType.INNVILGET));
-        var validering = new EndringerHarBegrunnelseValidering(opprinnelig);
-        assertThatCode(() -> validering.utfør(nyePerioder)).isNull();
+        List<UttakResultatPeriode> opprinneligeGrupper = Collections.singletonList(periodeGruppe(null, PeriodeResultatType.INNVILGET));
+        UttakResultatPerioder opprinnelig = new UttakResultatPerioder(opprinneligeGrupper);
+        List<UttakResultatPeriode> grupper = Collections.singletonList(periodeGruppe(null, PeriodeResultatType.INNVILGET));
+        UttakResultatPerioder perioder = new UttakResultatPerioder(grupper);
+        EndringerHarBegrunnelseValidering validering = new EndringerHarBegrunnelseValidering(opprinnelig);
+        assertThatCode(() -> validering.utfør(perioder)).isNull();
     }
 
     @Test
     public void okÅMangleBegrunnelseHvisBareTrekkdagerEndring() {
-        var opprinnelig = List.of(periode(new Trekkdager(10)));
-        var nyePerioder = List.of(periode(new Trekkdager(15)));
-        var validering = new EndringerHarBegrunnelseValidering(opprinnelig);
-        assertThatCode(() -> validering.utfør(nyePerioder)).isNull();
+        List<UttakResultatPeriode> opprinneligeGrupper = Collections.singletonList(periode(new Trekkdager(10)));
+        UttakResultatPerioder opprinnelig = new UttakResultatPerioder(opprinneligeGrupper);
+        List<UttakResultatPeriode> grupper = Collections.singletonList(periode(new Trekkdager(15)));
+        UttakResultatPerioder perioder = new UttakResultatPerioder(grupper);
+        EndringerHarBegrunnelseValidering validering = new EndringerHarBegrunnelseValidering(opprinnelig);
+        assertThatCode(() -> validering.utfør(perioder)).isNull();
     }
 
-    private ForeldrepengerUttakPeriode periode(Trekkdager trekkdager) {
-        var periode = new ForeldrepengerUttakPeriodeAktivitet.Builder()
+    private UttakResultatPeriode periode(Trekkdager trekkdager) {
+        UttakResultatPeriodeAktivitet periode = new UttakResultatPeriodeAktivitet.Builder()
             .medTrekkdager(trekkdager)
             .medArbeidsprosent(BigDecimal.TEN)
             .medUtbetalingsgrad(BigDecimal.TEN)
-            .medAktivitet(new ForeldrepengerUttakAktivitet(UttakArbeidType.ORDINÆRT_ARBEID, null, null))
+            .medUttakArbeidType(UttakArbeidType.ORDINÆRT_ARBEID)
             .build();
-        var aktiviteter = List.of(periode);
-        return new ForeldrepengerUttakPeriode.Builder()
+        List<UttakResultatPeriodeAktivitet> aktiviteter = Collections.singletonList(periode);
+        return new UttakResultatPeriode.Builder()
             .medBegrunnelse(null)
             .medTidsperiode(new LocalDateInterval(LocalDate.now(), LocalDate.now().plusDays(1)))
-            .medResultatType(PeriodeResultatType.INNVILGET)
+            .medType(PeriodeResultatType.INNVILGET)
             .medAktiviteter(aktiviteter)
             .build();
     }
 
-    private ForeldrepengerUttakPeriode periode(String begrunnelse, PeriodeResultatType resultatType) {
-        return new ForeldrepengerUttakPeriode.Builder()
+    private UttakResultatPeriode periodeGruppe(String begrunnelse, PeriodeResultatType resultatType) {
+        return new UttakResultatPeriode.Builder()
             .medBegrunnelse(begrunnelse)
-            .medResultatType(resultatType)
+            .medType(resultatType)
             .medTidsperiode(new LocalDateInterval(LocalDate.now(), LocalDate.now().plusDays(1)))
             .build();
     }
