@@ -4,12 +4,14 @@ import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.Test;
 
 import no.nav.foreldrepenger.behandlingslager.uttak.PeriodeResultatType;
-import no.nav.foreldrepenger.domene.uttak.ForeldrepengerUttakPeriode;
+import no.nav.foreldrepenger.domene.uttak.fastsetteperioder.UttakResultatPeriode;
+import no.nav.foreldrepenger.domene.uttak.fastsetteperioder.UttakResultatPerioder;
 import no.nav.fpsak.tidsserie.LocalDateInterval;
 import no.nav.vedtak.exception.TekniskException;
 
@@ -17,7 +19,8 @@ public class PerioderHarFastsattResultatValideringTest {
 
     @Test
     public void feilVedPeriodeMedNullResultat() {
-        var nyePerioder = List.of(periodeMedResultat(null));
+        List<UttakResultatPeriode> nyeGrupper = Collections.singletonList(gruppeMedResultat(null));
+        UttakResultatPerioder nyePerioder = new UttakResultatPerioder(nyeGrupper);
 
         PerioderHarFastsattResultatValidering validering = new PerioderHarFastsattResultatValidering();
         assertThatThrownBy(() -> validering.utfør(nyePerioder)).isInstanceOf(TekniskException.class);
@@ -25,7 +28,8 @@ public class PerioderHarFastsattResultatValideringTest {
 
     @Test
     public void feilVedPeriodeMedResultatIkkeFastsatt() {
-        var nyePerioder = List.of(periodeMedResultat(PeriodeResultatType.IKKE_FASTSATT));
+        List<UttakResultatPeriode> nyeGrupper = Collections.singletonList(gruppeMedResultat(PeriodeResultatType.IKKE_FASTSATT));
+        UttakResultatPerioder nyePerioder = new UttakResultatPerioder(nyeGrupper);
 
         PerioderHarFastsattResultatValidering validering = new PerioderHarFastsattResultatValidering();
         assertThatThrownBy(() -> validering.utfør(nyePerioder)).isInstanceOf(TekniskException.class);
@@ -33,16 +37,17 @@ public class PerioderHarFastsattResultatValideringTest {
 
     @Test
     public void okHvisPerioderHarFastsattResultat() {
-        var nyePerioder = List.of(periodeMedResultat(PeriodeResultatType.INNVILGET));
+        List<UttakResultatPeriode> nyeGrupper = Collections.singletonList(gruppeMedResultat(PeriodeResultatType.INNVILGET));
+        UttakResultatPerioder nyePerioder = new UttakResultatPerioder(nyeGrupper);
 
         PerioderHarFastsattResultatValidering validering = new PerioderHarFastsattResultatValidering();
         assertThatCode(() -> validering.utfør(nyePerioder)).doesNotThrowAnyException();
     }
 
-    private ForeldrepengerUttakPeriode periodeMedResultat(PeriodeResultatType resultatType) {
-        return new ForeldrepengerUttakPeriode.Builder()
+    private UttakResultatPeriode gruppeMedResultat(PeriodeResultatType resultatType) {
+        return new UttakResultatPeriode.Builder()
             .medTidsperiode(new LocalDateInterval(LocalDate.now(), LocalDate.now().plusDays(1)))
-            .medResultatType(resultatType)
+            .medType(resultatType)
             .build();
     }
 }
